# wiki

./: CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  pyproject.toml
.github/workflows/: test.yml
tests/: conftest.py  test_frontmatter.py  test_init.py  test_shacl.py  test_sparql.py
wiki/: __main__.py
wiki/frontmatter/: __init__.py
wiki/shacl/: __init__.py
wiki/sparql/: __init__.py
wiki/templates/default/wiki/: README.md
