[project]
name = "wiki-framework"
version = "0.1.0"
description = "An opinionated, engine-agnostic wiki framework with SHACL validation"
requires-python = ">=3.12"
dependencies = [
    "rdflib",
    "pyshacl",
    "pyyaml",
    "owlrl",
]

[project.scripts]
wiki = "wiki.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["wiki"]

[dependency-groups]
dev = []
